unpackaged/main/default/objects/Informacion_De_Lote__c/Informacion_De_Lote__c.object-meta.xml
<CustomObject>
    <description>Guarda la informacion de los lotes que se utilizaron para surtir la clave.</description>
    <label>Informacion De Lote</label>
    <nameField>
        <label>Nombre de Informacion De Lotes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informacion De Lotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>