unpackaged/main/default/objects/Informacion_De_Lote__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>