unpackaged/main/default/objects/Informacion_De_Lote__c/fields/Cantidad_de_Piezas_Recibidas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Piezas_Recibidas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Guarda la cantidad de piezas recibidas por el auxiliar de farmacia.</description>
    <label>Cantidad de Piezas Faltantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>