unpackaged/main/default/objects/Informacion_De_Lote__c/fields/Fecha_de_Expiracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Expiracion__c</fullName>
    <label>Fecha de Expiracion</label>
    <type>Date</type>
</CustomField>