unpackaged/main/default/objects/Informacion_De_Lote__c/fields/Numero_de_Lote__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Lote__c</fullName>
    <label>Numero de Lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>