unpackaged/main/default/objects/Informacion_De_Lote__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <label>Order Line Item</label>
    <referenceTo>Order_Line_Item__c</referenceTo>
    <relationshipLabel>Informacion De Lotes</relationshipLabel>
    <relationshipName>Informacion_De_Lotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>