unpackaged/main/default/objects/Informacion_De_Lote__c/fields/Piezas_Recibidas__c.field-meta.xml
<CustomField>
    <fullName>Piezas_Recibidas__c</fullName>
    <description>Calcular la cantidad recibida.</description>
    <formula>IF( Cantidad__c !=  Cantidad_de_Piezas_Recibidas__c ,Cantidad__c - Cantidad_de_Piezas_Recibidas__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Piezas Recibidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>